tests/ui/sqlite_strict_affinity/fail/strict_cast_affinity_mismatch.stderr
error[E0277]: SQL type `drizzle::sqlite::types::Text` is not compatible with `drizzle::sqlite::types::Integer`
  --> tests/ui/sqlite_strict_affinity/fail/strict_cast_affinity_mismatch.rs:13:20
   |
13 |     let _ = cast::<_, _, drizzle::sqlite::types::Integer>(user.name, drizzle::sqlite::types::Integer);
   |                    ^ these SQL types cannot be compared or coerced
   |
   = help: the trait `Compatible<drizzle::sqlite::types::Integer>` is not implemented for `drizzle::sqlite::types::Text`
   = note: compatible types include: integers with integers/floats, text with text/varchar, and any type with itself
help: `drizzle::sqlite::types::Text` implements trait `Compatible<Rhs>`
  --> types/src/sql/coerce.rs
   |
   |           $(impl Compatible<$ty> for $ty {})+
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Compatible`
...
   |               impl Compatible<$rest> for $first {}
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Compatible<drizzle::sqlite::types::Blob>`
...
   |               impl Compatible<$any> for $ty {}
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Compatible<drizzle::sqlite::types::Any>`
...
   |               impl Compatible<crate::Placeholder> for $ty {}
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Compatible<drizzle::core::types::Placeholder>`
...
   | / impl_reflexive_compat!(
   | |     crate::sqlite::types::Integer,
   | |     crate::sqlite::types::Text,
   | |     crate::sqlite::types::Real,
...  |
   | |     crate::postgres::types::Enum,
   | | );
   | |_- in this macro invocation
...
   |   mutual_compat!(crate::sqlite::types::Text, crate::sqlite::types::Blob);
   |   ---------------------------------------------------------------------- in this macro invocation
...
   | / any_compat!(crate::sqlite::types::Any;
   | |     crate::sqlite::types::Integer,
   | |     crate::sqlite::types::Text,
   | |     crate::sqlite::types::Real,
   | |     crate::sqlite::types::Blob,
   | |     crate::sqlite::types::Numeric
   | | );
   | |_- in this macro invocation
   |
   | / impl_placeholder_compat!(
   | |     crate::sqlite::types::Integer,
   | |     crate::sqlite::types::Text,
   | |     crate::sqlite::types::Real,
...  |
   | |     crate::sqlite::types::Any
   | | );
   | |_- in this macro invocation
   = note: required for `()` to implement `CastTypePolicy<SQLiteDialect, drizzle::sqlite::types::Text, drizzle::sqlite::types::Integer>`
note: required by a bound in `drizzle::core::expr::cast`
  --> core/src/expr/util.rs
   |
   | pub fn cast<'a, V, E, Target>(
   |        ---- required by a bound in this function
...
   |     (): CastTypePolicy<V::DialectMarker, E::SQLType, Target>,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `cast`
   = note: this error originates in the macro `impl_reflexive_compat` which comes from the expansion of the macro `impl_placeholder_compat` (in Nightly builds, run with -Z macro-backtrace for more info)
